--- a/src/index.html
+++ b/src/index.html
@@ -147,6 +147,12 @@
                             </svg>
                             Optimize Memory
                         </button>
+                        <button class="btn-danger" id="deep-clean-memory">
+                            <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
+                                <path d="M8 2L2 8l6 6M14 2l-6 6 6 6" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                            </svg>
+                            Deep Clean (Admin)
+                        </button>
                     </div>
                 </div>
 
