--- a/src/index.html
+++ b/src/index.html
@@ -274,7 +274,7 @@
                                 <th>Process Name</th>
                                 <th>PID</th>
                                 <th>CPU %</th>
-                                <th>Memory</th>
+                                <th title="Resident Set Size (physical memory in use)">Memory (RSS)</th>
                                 <th>Action</th>
                             </tr>
                         </thead>
