--- a/src/index.html
+++ b/src/index.html
@@ -233,8 +233,62 @@
                         </div>
                     </div>
 
+                    <div class="smart-selection">
+                        <h4>Smart Selection</h4>
+                        <div class="selection-controls">
+                            <button class="btn-primary" id="auto-select-safe">
+                                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
+                                    <path d="M6 8l2 2 4-4" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                                Auto-Select Safe Files
+                            </button>
+                            <button class="btn-secondary" id="select-by-safety">
+                                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
+                                    <rect x="3" y="3" width="10" height="10" rx="1" stroke="currentColor" stroke-width="1.5"/>
+                                    <path d="M6 8l2 2 4-4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                                Select Very Safe (95+)
+                            </button>
+                            <button class="btn-secondary" id="clear-selection">
+                                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
+                                    <path d="M5 5l6 6M11 5l-6 6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+                                </svg>
+                                Clear Selection
+                            </button>
+                        </div>
+                        <div class="selection-info">
+                            <span id="selected-count">0 files selected</span>
+                            <span id="selected-size">0 B</span>
+                        </div>
+                    </div>
+
+                    <div class="filters-row" style="display: flex; align-items: center; gap: 12px; margin: 8px 0; justify-content: space-between;">
+                        <label style="display:flex; align-items:center; gap:8px; cursor:pointer;">
+                            <input type="checkbox" id="toggle-advanced">
+                            <span>Show advanced categories</span>
+                        </label>
+                        <div class="button-group">
+                            <button class="btn-secondary" id="empty-trash" title="Permanently empty your Trash">
+                                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
+                                    <path d="M3 4h10M5 4V3a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v1M6 7v4M10 7v4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+                                </svg>
+                                Empty Trash
+                            </button>
+                        </div>
+                    </div>
+
                     <div class="categories-list" id="categories-list">
                         <!-- Categories will be populated here -->
+                    </div>
+
+                    <div class="category-actions" id="category-actions" style="display:none; align-items:center; justify-content:space-between; margin: 8px 0;">
+                        <div>
+                            <strong>Category:</strong> <span id="current-category-name">—</span>
+                        </div>
+                        <div class="button-group">
+                            <button class="btn-secondary" id="clear-category-filter">Clear Filter</button>
+                            <button class="btn-danger" id="clean-this-category">Clean This Category</button>
+                        </div>
                     </div>
 
                     <div class="files-list" id="files-list">
