improvements and styles

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
             <div class="tab-content active" id="dashboard">
                 <div class="header">
                     <h2>System Overview</h2>
-                    <button class="btn-primary" id="quick-optimize">
+                    <button class="btn btn-primary" id="quick-optimize">
                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                             <path d="M8 2v6M4 8l4 4 4-4" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                         </svg>
@@ -134,20 +134,20 @@
                 <div class="header">
                     <h2>Memory Management</h2>
                     <div class="button-group">
-                        <button class="btn-secondary" id="refresh-memory">
+                        <button class="btn btn-secondary" id="refresh-memory">
                             <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                                 <path d="M14 8A6 6 0 1 1 8 2" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
                                 <path d="M14 2v4h-4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                             Refresh
                         </button>
-                        <button class="btn-primary" id="optimize-memory">
+                        <button class="btn btn-primary" id="optimize-memory">
                             <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                                 <path d="M8 2v12M4 8h8" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                             </svg>
                             Optimize Memory
                         </button>
-                        <button class="btn-danger" id="deep-clean-memory">
+                        <button class="btn btn-danger" id="deep-clean-memory">
                             <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                                 <path d="M8 2L2 8l6 6M14 2l-6 6 6 6" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                             </svg>
@@ -195,14 +195,14 @@
                 <div class="header">
                     <h2>Storage Cleaner</h2>
                     <div class="button-group">
-                        <button class="btn-secondary" id="scan-files">
+                        <button class="btn btn-secondary" id="scan-files">
                             <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                                 <circle cx="8" cy="8" r="6" stroke="currentColor" stroke-width="1.5"/>
                                 <path d="M8 5v3l2 2" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
                             </svg>
                             Scan System
                         </button>
-                        <button class="btn-danger" id="clean-selected" disabled>
+                        <button class="btn btn-danger" id="clean-selected" disabled>
                             <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                                 <path d="M3 4h10M5 4V3a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v1M6 7v4M10 7v4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
                             </svg>
@@ -236,20 +236,20 @@
                     <div class="smart-selection">
                         <h4>Smart Selection</h4>
                         <div class="selection-controls">
-                            <button class="btn-primary" id="auto-select-safe">
+                            <button class="btn btn-primary" id="auto-select-safe">
                                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                                     <path d="M6 8l2 2 4-4" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>
                                 Auto-Select Safe Files
                             </button>
-                            <button class="btn-secondary" id="select-by-safety">
+                            <button class="btn btn-secondary" id="select-by-safety">
                                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                                     <rect x="3" y="3" width="10" height="10" rx="1" stroke="currentColor" stroke-width="1.5"/>
                                     <path d="M6 8l2 2 4-4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>
                                 Select Very Safe (95+)
                             </button>
-                            <button class="btn-secondary" id="clear-selection">
+                            <button class="btn btn-secondary" id="clear-selection">
                                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                                     <path d="M5 5l6 6M11 5l-6 6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
                                 </svg>
@@ -268,7 +268,7 @@
                             <span>Show advanced categories</span>
                         </label>
                         <div class="button-group">
-                            <button class="btn-secondary" id="empty-trash" title="Permanently empty your Trash">
+                            <button class="btn btn-secondary" id="empty-trash" title="Permanently empty your Trash">
                                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                                     <path d="M3 4h10M5 4V3a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v1M6 7v4M10 7v4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
                                 </svg>
@@ -286,8 +286,8 @@
                             <strong>Category:</strong> <span id="current-category-name">—</span>
                         </div>
                         <div class="button-group">
-                            <button class="btn-secondary" id="clear-category-filter">Clear Filter</button>
-                            <button class="btn-danger" id="clean-this-category">Clean This Category</button>
+                            <button class="btn btn-secondary" id="clear-category-filter">Clear Filter</button>
+                            <button class="btn btn-danger" id="clean-this-category">Clean This Category</button>
                         </div>
                     </div>
 
@@ -302,7 +302,7 @@
                 <div class="header">
                     <h2>Process Manager</h2>
                     <div class="button-group">
-                        <button class="btn-secondary" id="refresh-processes">
+                        <button class="btn btn-secondary" id="refresh-processes">
                             <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                                 <path d="M14 8A6 6 0 1 1 8 2" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
                                 <path d="M14 2v4h-4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
